Adding conflicting changes (on purpose) For Git example. I hope this works!

--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright git training
 -->
 <head>
-	<title>An example website</title>
+	<title>A very ridpectful website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,8 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I am not sure wha will go here, But I am sure 
+			it would be nice.
 		</p>
 	</main>
 	<footer class="container">
