--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright git training
+	Adding changes before rebasing conflict
 -->
 <head>
 	<title>A very ridpectful website</title>
