--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@
 	Some silly changes from master branch
 -->
 <head>
-	<title>silly changes from master branch</title>
+	<title>Lots of troubles</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,14 +16,10 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Junk filter content -->
 		<p>
-			Just stuff for now,
-			Not sure if we should replace it or not.
 		</p>
 	</main>
 	<footer class="container">
-		<p>Jason Taylor 2014</p>
 	</footer>
 </body>
 </html>
