--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <!--
 	Copyright git training
-	Adding changes before rebasing conflict
+	Some silly changes from master branch
 -->
 <head>
-	<title>A very ridpectful website</title>
+	<title>silly changes from master branch</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,12 +16,14 @@
 </head>
 <body>
 	<main class="container">
-	<!-- Content Goes Here -->
+	<!-- Junk filter content -->
 		<p>
-			Just some content
+			Just stuff for now,
+			Not sure if we should replace it or not.
 		</p>
 	</main>
 	<footer class="container">
+		<p>Jason Taylor 2014</p>
 	</footer>
 </body>
 </html>
