adding changes after rebasing conflict

--- a/simple.html
+++ b/simple.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <!--
 	Copyright git training
-	Some silly changes from master branch
 -->
 <head>
-	<title>Lots of troubles</title>
+	<title>Lots of In a little repo</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
