--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright git training
 -->
 <head>
-	<title>Lots of In a little repo</title>
+	<title>Updating title for stsing Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -16,6 +16,7 @@
 <body>
 	<main class="container">
 		<p>
+			Adding more important content here.
 		</p>
 	</main>
 	<footer class="container">
