--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright git training
 -->
 <head>
-	<title>Updating title for stsing Example</title>
+	<title>Updating title for Stash branches Example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
